--- a/assets/panel/css/custom.css
+++ b/assets/panel/css/custom.css
@@ -70,6 +70,12 @@
   background-color: #9f7159;
 }
 
+.nav-pills.chart-deviasi-btn > li {
+  float: none;
+  width: fit-content;
+  display: inline-block;
+}
+
 /* Dipa Collapse Accordion */
 .dipa-collapse .mb-0 {
   margin: 0 !important;
@@ -176,4 +182,12 @@ input[type="radio"] {
 .grey-line {
   border-color: #bbb;
   margin: 10px 0;
+}
+
+#disabled-button-wrapper {
+  display: inline-block;
+}
+
+#disabled-button-wrapper .btn[disabled] {
+  pointer-events: none;
 }
