--- a/assets/panel/css/custom.css
+++ b/assets/panel/css/custom.css
@@ -48,7 +48,7 @@
   color: #adb5bd;
 }
 .progress-angka {
-  font-size: 20px;
+  font-size: 153%;
   margin-bottom: 6px;
 }
 .dashboard-progress .progress {
